Fix schedule creation layouts, disabled input styles, input group alignment on the updated theme

--- a/web/html/src/branding/css/susemanager/components/buttons.suma.scss
+++ b/web/html/src/branding/css/susemanager/components/buttons.suma.scss
@@ -186,10 +186,6 @@
     bottom: -1px;
     left: -1px;
   }
-
-  &:last-child {
-    margin-left: -1px;
-  }
 }
 
 .btn-group .btn {
